Fix head links center align and replaced information photos

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
     padding: 2% 5.5%;
     background-color: #1F2937;
